syntax = "proto3";

package dev.httpmarco.polocloud.explanation.group;

message ClusterGroupExplanation {
    string name = 1;
    SharedPlatform platform = 2;
    int32 minMemory = 3;
    int32 maxMemory = 4;
    int32 minOnlineServices = 5;
    int32 maxOnlineServices = 6;
    double percentageToStartNewService = 7;
    repeated string templates = 8;
}

message SharedPlatform {
    string name = 1;
    string version = 2;
    string type = 3;
}

